cmake_minimum_required(VERSION 2.8)

set (TESTS master_test client_test)

#ENABLE_TESTING()

INCLUDE_DIRECTORIES(BEFORE ${evpath_BINARY_DIR} ${evpath_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})

#file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/dfg_tests.tsts "" )
foreach (TEST ${TESTS} )
    ADD_EXECUTABLE(ev_store_${TEST} ${TEST}.c)
    SET_TARGET_PROPERTIES(ev_store_${TEST} PROPERTIES LINKER_LANGUAGE ${C_EXECUTABLE_LINKER_LANGUAGE})
    TARGET_LINK_LIBRARIES(ev_store_${TEST} evpath ${BASE_LIBS})
#    ADD_EXECUTABLE(dfg_${TEST} ${TEST}.c test_support.c)
#    SET_TARGET_PROPERTIES(dfg_${TEST} PROPERTIES LINKER_LANGUAGE ${C_EXECUTABLE_LINKER_LANGUAGE})
#    TARGET_LINK_LIBRARIES(dfg_${TEST} evpath ${BASE_LIBS})
#    ADD_TEST(dfg_${TEST} dfg_${TEST})
#    LIST( APPEND DFG_TESTS "dfg_${TEST}")
#    file(APPEND ${CMAKE_CURRENT_BINARY_DIR}/dfg_tests.tsts "dfg_${TEST}\n" )
endforeach()

IF(DEFINED BUILD_MPI_WEIR_TEST)
    FIND_PACKAGE(MPI REQUIRED)
    INCLUDE_DIRECTORIES(AFTER ${MPI_INCLUDE_PATH})
    ADD_EXECUTABLE(master_client_mpi_test master_and_client_mpi.c)
    if(MPI_COMPILE_FLAGS)
	SET_TARGET_PROPERTIES(master_client_mpi_test PROPERTIES COMPILE_FLAGS "${MPI_COMPILE_FLAGS}")
    endif()
    SET_TARGET_PROPERTIES(master_client_mpi_test PROPERTIES LINKER_LANGUAGE ${C_EXECUTABLE_LINKER_LANGUAGE})

    if(MPI_LINK_FLAGS)
	SET_TARGET_PROPERTIES(master_client_mpi_test PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
    endif()
    TARGET_LINK_LIBRARIES(master_client_mpi_test evpath ${BASE_LIBS} ${MPI_LIBRARIES})
ENDIF(DEFINED BUILD_MPI_WEIR_TEST)

#if (TEST_INSTALL_DIRECTORY) 
#  install(TARGETS ${DFG_TESTS} DESTINATION "${TEST_INSTALL_DIRECTORY}")
#  install(FILES ${CMAKE_CURRENT_BINARY_DIR}/dfg_tests.tsts DESTINATION "${TEST_INSTALL_DIRECTORY}") #endif (TEST_INSTALL_DIRECTORY) 
